--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,16 @@
 					</div>
 					</div>
 				</div>
+				<div class="main">
+						<div class="summary">
+								<div class="summary-head">
+								</div>
+								<div class="summary-context">
+								</div>
+								<div class="summary-footer">
+								</div>
+						</div>
+				</div>
 		</div>
 	</body>
 </html>
