--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,7 @@
 					</div>
 				</div>
 				<div class="main">
+						<div class="content">
 						<div class="summary">
 								<div class="summary-head">
 								</div>
@@ -33,6 +34,44 @@
 								<div class="summary-footer">
 								</div>
 						</div>
+						<div class="summary">
+								<div class="summary-head">
+								</div>
+								<div class="summary-context">
+								</div>
+								<div class="summary-footer">
+								</div>
+						</div>
+						<div class="summary">
+								<div class="summary-head">
+								</div>
+								<div class="summary-context">
+								</div>
+								<div class="summary-footer">
+								</div>
+						</div>
+						<div class="summary">
+								<div class="summary-head">
+								</div>
+								<div class="summary-context">
+								</div>
+								<div class="summary-footer">
+								</div>
+						</div>
+						</div>
+						<div class="describe">
+
+						</div>
+						<div class="history">
+
+						</div>
+
+				</div>
+				<div class="footer">
+					<a href="javascript:void(0)" class="footer-text">Copyright@2016-2017</a>
+					<a href="javascript:void(0)" class="footer-text">Changer's Blog</a>
+					<a href="javascript:void(0)" class="footer-text">dingjinchengyx@163.com</a>
+					<a href="javascript:void(0)" class="footer-text">HangZhou</a>
 				</div>
 		</div>
 	</body>
