--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
 	<head>
 			<title>Changer's Blog</title>
 			<link href="style/blog.css" rel="stylesheet" type="text/css" />   
+			<script type="text/javascript" src="js/jquery-3.1.1.js"> </script>
+			<script type="text/javascript" src="js/velocity.js"> </script>
 	</head>
 	<body>
 		<div class="container">
@@ -28,34 +30,78 @@
 						<div class="content">
 						<div class="summary">
 								<div class="summary-head">
+										<a href="javascript:void(0)">this is a blog's title,来点中文试试</a>
 								</div>
-								<div class="summary-context">
+								<div class="summary-content">
+										<p>
+										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
+										</p>
+										<p>
+										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
+										</p>
+
 								</div>
 								<div class="summary-footer">
+										<a herf="javascipt:void(0)">标签1</a>
+										<a herf="javascipt:void(0)">标签2</a>
+										<a herf="javascipt:void(0)">2016-09-20 18:20:00</a>
 								</div>
 						</div>
 						<div class="summary">
 								<div class="summary-head">
+										<a href="javascript:void(0)">this is a blog's title,来点中文试试</a>
 								</div>
-								<div class="summary-context">
+								<div class="summary-content">
+										<p>
+										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
+										</p>
+										<p>
+										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
+										</p>
+
 								</div>
 								<div class="summary-footer">
+										<a herf="javascipt:void(0)">标签1</a>
+										<a herf="javascipt:void(0)">标签2</a>
+										<a herf="javascipt:void(0)">2016-09-20 18:20:00</a>
 								</div>
 						</div>
 						<div class="summary">
 								<div class="summary-head">
+										<a href="javascript:void(0)">this is a blog's title,来点中文试试</a>
 								</div>
-								<div class="summary-context">
+								<div class="summary-content">
+										<p>
+										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
+										</p>
+										<p>
+										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
+										</p>
+
 								</div>
 								<div class="summary-footer">
+										<a herf="javascipt:void(0)">标签1</a>
+										<a herf="javascipt:void(0)">标签2</a>
+										<a herf="javascipt:void(0)">2016-09-20 18:20:00</a>
 								</div>
 						</div>
-						<div class="summary">
+							<div class="summary">
 								<div class="summary-head">
+										<a href="javascript:void(0)">this is a blog's title,来点中文试试</a>
 								</div>
-								<div class="summary-context">
+								<div class="summary-content">
+										<p>
+										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
+										</p>
+										<p>
+										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
+										</p>
+
 								</div>
 								<div class="summary-footer">
+										<a herf="javascipt:void(0)">标签1</a>
+										<a herf="javascipt:void(0)">标签2</a>
+										<a herf="javascipt:void(0)">2016-09-20 18:20:00</a>
 								</div>
 						</div>
 						</div>
