--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,24 +27,27 @@
 					</div>
 				</div>
 				<div class="main">
+						<div class="nav-caption">
+							<div class="nav-caption-block">
+									<a href="javascript:void(0)">首页</a><i class="fa fa-angle-right"></i>
+									<a href="javascript:void(0)">随笔</a><i class="fa fa-angle-right"></i>
+									<a href="javascript:void(0)">钢铁是怎样炼成的</a>
+							</div>
+						</div>
 						<div class="content">
 						<div class="summary">
 								<div class="summary-head">
-										<a href="javascript:void(0)">this is a blog's title,来点中文试试</a>
+										<a href="/document">this is a blog's title,来点中文试试</a>
 								</div>
 								<div class="summary-content">
 										<p>
-										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
+										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明,注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
 										</p>
-										<p>
-										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
-										</p>
-
 								</div>
 								<div class="summary-footer">
-										<a herf="javascipt:void(0)">标签1</a>
-										<a herf="javascipt:void(0)">标签2</a>
-										<a herf="javascipt:void(0)">2016-09-20 18:20:00</a>
+										<a herf="javascipt:void(0)" class="label_green">#标签1</a>
+										<a herf="javascipt:void(0)" class="label_blue">#标签2</a>
+										<a herf="javascipt:void(0)" class="label_normal">2016-09-20 18:20:00</a>
 								</div>
 						</div>
 						<div class="summary">
@@ -55,15 +58,11 @@
 										<p>
 										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
 										</p>
-										<p>
-										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
-										</p>
-
 								</div>
 								<div class="summary-footer">
-										<a herf="javascipt:void(0)">标签1</a>
-										<a herf="javascipt:void(0)">标签2</a>
-										<a herf="javascipt:void(0)">2016-09-20 18:20:00</a>
+										<a herf="javascipt:void(0)" class="label_green">#标签1</a>
+										<a herf="javascipt:void(0)" class="label_blue">#标签2</a>
+										<a herf="javascipt:void(0)" class="label_normal">2016-09-20 18:20:00</a>
 								</div>
 						</div>
 						<div class="summary">
@@ -74,44 +73,130 @@
 										<p>
 										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
 										</p>
-										<p>
-										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
-										</p>
-
 								</div>
 								<div class="summary-footer">
-										<a herf="javascipt:void(0)">标签1</a>
-										<a herf="javascipt:void(0)">标签2</a>
-										<a herf="javascipt:void(0)">2016-09-20 18:20:00</a>
+										<a herf="javascipt:void(0)" class="label_blue">#标签1</a>
+										<a herf="javascipt:void(0)" class="label_green">#标签2</a>
+										<a herf="javascipt:void(0)" class="label_normal">2016-09-20 18:20:00</a>
 								</div>
 						</div>
-							<div class="summary">
+						<div class="summary">
 								<div class="summary-head">
-										<a href="javascript:void(0)">this is a blog's title,来点中文试试</a>
+									<a href="javascript:void(0)">this is a blog's title,来点中文试试</a>
 								</div>
 								<div class="summary-content">
 										<p>
 										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
 										</p>
+								</div>
+								<div class="summary-footer">
+										<a herf="javascipt:void(0)" class="label_green">#标签1</a>
+										<a herf="javascipt:void(0)" class="label_blue">#标签2</a>
+										<a herf="javascipt:void(0)" class="label_normal">2016-09-20 18:20:00</a>
+								</div>
+						</div>
+						<div class="summary">
+								<div class="summary-head">
+									<a href="javascript:void(0)">this is a blog's title,来点中文试试</a>
+								</div>
+								<div class="summary-content">
 										<p>
 										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
 										</p>
-
 								</div>
 								<div class="summary-footer">
-										<a herf="javascipt:void(0)">标签1</a>
-										<a herf="javascipt:void(0)">标签2</a>
-										<a herf="javascipt:void(0)">2016-09-20 18:20:00</a>
+										<a herf="javascipt:void(0)" class="label_green">#标签1</a>
+										<a herf="javascipt:void(0)" class="label_blue">#标签2</a>
+										<a herf="javascipt:void(0)" class="label_normal">2016-09-20 18:20:00</a>
 								</div>
 						</div>
+						<div class="summary">
+								<div class="summary-head">
+									<a href="javascript:void(0)">this is a blog's title,来点中文试试</a>
+								</div>
+								<div class="summary-content">
+										<p>
+										relative 元素遵循正常的文档流，所以周围元素不会忽略它的存在，relative 元素同样支持 top,bottom,left,right 等属性。当我们使用 top,bottom,left,right等属性对 relative 元素进行相对定位时的效果有点类似于 margin 属性达到的效果，但是区别在于， relative 元素周围的元素将会忽略 relative 元素的移动。我们注意，当 relative 元素未使用定位属性进行相对定位时，它不会被周围的元素忽略，但利用定位属性进行定位后，周围的元素会忽略 relative 元素的移动，它们会认为 relative 元素仍然在原来的位置，并未进行移动，我们用个例子来说明
+										</p>
+								</div>
+								<div class="summary-footer">
+										<a herf="javascipt:void(0)" class="label_green">#标签1</a>
+										<a herf="javascipt:void(0)" class="label_blue">#标签2</a>
+										<a herf="javascipt:void(0)" class="label_normal">2016-09-20 18:20:00</a>
+								</div>
 						</div>
-						<div class="describe">
-
 						</div>
 						<div class="history">
+								<div>
+									<a href="javascript:void(0)" class="history-title">阅读排行</a>
+									<ol style="margin-left:-1em;">
+											<li><a href="javascript:void(0)" class="history-content">论持久战</a></li>
+											<li><a href="javascript:void(0)" class="history-content">钢铁是怎样炼成的</a></li>
+											<li><a href="javascript:void(0)" class="history-content">哈哈哈哈哈</a></li>
+											<li><a href="javascript:void(0)" class="history-content">这是一个测试</a></li>
+											<li><a href="javascript:void(0)" class="history-content">历史文章哈</a></li>
+											<li><a href="javascript:void(0)" class="history-content">宇宙是怎样形成的,来一个长一点的标题啊</a></li>
+											<li><a href="javascript:void(0)" class="history-content">如何设计网站</a></li>
+											<li><a href="javascript:void(0)" class="history-content">人工智能</a></li>
+											<li><a href="javascript:void(0)" class="history-content">如何设计网站</a></li>
+											<li><a href="javascript:void(0)" class="history-content">人工智能</a></li>
+											<li><a href="javascript:void(0)" class="history-content">如何设计网站</a></li>
+											<li><a href="javascript:void(0)" class="history-content">人工智能</a></li>
 
+									</ol>
+								</div>
+								<div>
+										<a href="javascript:void(0)" class="history-title">分类推荐</a>
+										<ul style="margin-left:-1em;">
+											<li><a href="javascript:void(0)" class="history-content">C/C++(20)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">Java(1)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">Mysql(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">Python(10)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">电子(5)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">机器学习(10)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">Android(5)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">随笔(10)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">算法(5)</a></li>
+										</ul>
+								</div>
+								<div>
+									<a href="javascript:void(0)" class="history-title">随笔档案</a>
+									<ul style="margin-left:-1em;">
+											<li><a href="javascript:void(0)" class="history-content">2015年10月(1)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2015年11月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2015年12月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2016年1月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2016年2月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2016年3月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2016年4月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2016年5月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2016年6月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2016年7月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2016年8月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2016年9月(2)</a></li>
+											<li><a href="javascript:void(0)" class="history-content">2016年10月(2)</a></li>
+									</ul>
+								</div>
+								<div style="border-bottom:1px solid rgb(220,220,220);">
+										<a href="javascript:void(0)" class="history-title">文章搜索</a>
+										<input type="text" style="width:58%;height:20px;display:inline;margin:20px 0.5em;"></input>
+										<button style="width:25%;margin:20px 0;height:20px;">搜搜</button>
+								</div>
+								<p class="history-sign">
+									WUWUWU~~~,开火车了！
+								</p>
 						</div>
-
+						<div class="rotate">
+								<div class="rotate-up"><i class="fa fa-angle-left"></i><a href="javascript:void(0)">上一页</a></div>
+								<span>
+										<a href="javascript:void(0)">1</a>
+										<a href="javascript:void(0)">2</a>
+										<a href="javascript:void(0)">3</a>
+										<a href="javascript:void(0)">...</a>
+										<a href="javascript:void(0)">8</a>
+								</span>
+								<div class="rotate-down"><a href="javascript:void(0)">下一页</a><i class="fa fa-angle-right"></i></div>
+						</div>
 				</div>
 				<div class="footer">
 					<a href="javascript:void(0)" class="footer-text">Copyright@2016-2017</a>
