--- a/views/doc.ejs
+++ b/views/doc.ejs
@@ -26,7 +26,7 @@
 					</div>
 					</div>
 				</div>
-				<div class="main" style="min-height:0;height:auto;">
+				<div class="main" id="markdown" style="min-height:0;height:auto;">
 					<div class="document">
 						<div class="nav-caption-block">
 							<a href="javascript:void(0)">首页</a><i class="fa fa-angle-right"></i>
@@ -42,5 +42,6 @@
 					<a href="javascript:void(0)" class="footer-text">HangZhou</a>
 				</div>
 			</div>
+			<script type="text/javascript" src="<%=markdown%>"></script>
 	</body>
 </html>
