--- a/views/doc.ejs
+++ b/views/doc.ejs
@@ -3,12 +3,13 @@
 	<meta http-equiv="content-Type"content="text/html;charset=utf-8"> 
 	<head>
 			<title>Changer's Blog</title>
-			<link href="style/blog.css" rel="stylesheet" type="text/css" />   
-			<script type="text/javascript" src="js/jquery-3.1.1.js"> </script>
-			<script type="text/javascript" src="js/velocity.js"> </script>
+			<link href="../style/blog.css" rel="stylesheet" type="text/css" />  
+		   	<link href="../style/github-markdown.css" rel="stylesheet" type="text/css" />	
+			<script type="text/javascript" src="../js/jquery-3.1.1.js"> </script>
+			<script type="text/javascript" src="../js/velocity.js"> </script>
 	</head>
 	<body>
-			<div class="container">
+			<div class="container invisiable">
 				<div class="header">
 					<div id="header-outer" class="outer">
    					<div id="header-inner">
@@ -26,12 +27,14 @@
 					</div>
 					</div>
 				</div>
-				<div class="main" id="markdown" style="min-height:0;height:auto;">
+				<div class="main" style="min-height:0;height:auto;">
 					<div class="document">
 						<div class="nav-caption-block">
 							<a href="javascript:void(0)">首页</a><i class="fa fa-angle-right"></i>
 							<a href="javascript:void(0)">随笔</a><i class="fa fa-angle-right"></i>
 							<a href="javascript:void(0)">钢铁是怎样炼成的</a>
+						</div>
+						<div class="markdown-body" id="markdown">
 						</div>
 					</div>
 				</div>
